--- a/graphics-lab14.vcxproj.filters
+++ b/graphics-lab14.vcxproj.filters
@@ -45,4 +45,12 @@
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="shaders\shader.frag">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
+    <None Include="shaders\shader.vert">
+      <Filter>Файлы ресурсов</Filter>
+    </None>
+  </ItemGroup>
 </Project>
