--- a/imgui.ini
+++ b/imgui.ini
@@ -9,11 +9,60 @@ Size=164,111
 Collapsed=0
 
 [Window][Choose object##Pick central model]
-Pos=60,60
+Pos=61,60
 Size=524,448
 Collapsed=0
 
+[Window][Lab 14]
+Pos=60,60
+Size=150,71
+Collapsed=0
+
 [Table][0x3EB5076E,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xE3B25971,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7B1C238A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x4AE841A6,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x388B4A6F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7C9B00A4,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x7D95CF76,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xCBE1766F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x004E4811,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x29CF567F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0xFD673007,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x29C87589,4]
 RefScale=13
 Column 0  Sort=0v
 
