--- a/imgui.ini
+++ b/imgui.ini
@@ -1,18 +1,22 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Lab 13]
 Pos=160,62
 Size=356,305
+Collapsed=0
 
 [Window][Choose object##Pick central model]
 Pos=61,60
 Size=524,448
+Collapsed=0
 
 [Window][Lab 14]
-Pos=31,27
+Pos=30,49
 Size=269,437
+Collapsed=0
 
 [Table][0x3EB5076E,4]
 RefScale=13
